[package]
name = "maddr"
version = "0.3.1"
authors = ["Wim Looman <wim@nemo157.com>"]

description = "An implementation of the multiaddr format used in IPFS"

repository = "https://github.com/mycorrhiza/maddr-rs"

readme = "README.md"
keywords = ["multiaddr", "multiformats"]

license = "MIT/Apache-2.0"

[dependencies]
error-chain = "0.11.0"
mhash = "0.3.0"
varmint = "0.1.2"
